Billboards Entity (Admin)

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="★PlanetScaleのDBのURLとする"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="Cloudinaryの名前"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="Cloudinaryのアップロードプリセット"
