Stripe Setup & Checkout finalization (Admin, Store)

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 DATABASE_URL="★PlanetScaleのDBのURLとする"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="Cloudinaryの名前"
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="Cloudinaryのアップロードプリセット"
+STRIPE_API_KEY="Stripeのシークレットキー"
+FRONTEND_STORE_URL=http://localhost:3000 # ローカル環境 storeのURL
+STRIPE_WEBHOOK_SECRET="StripeのWebhookシークレットキー"
+
